# vitrum

./: .gitignore  Cargo.toml  LICENSE  dprint.json  flake.nix  makefile  rustfmt.toml
crates/vitrum/: Cargo.toml
crates/vitrum-bar/: Cargo.toml
crates/vitrum-bar/resources/: default.vt
crates/vitrum-bar/src/: main.rs
crates/vitrum-clip/: Cargo.toml
crates/vitrum-clip/src/: main.rs
crates/vitrum-config/: Cargo.toml
crates/vitrum-config/benches/: dsl_bench.rs
crates/vitrum-config/examples/: advanced.vt  basic.vt  load.rs
crates/vitrum-config/src/: lib.rs
crates/vitrum-config/src/script/: arena.rs  ast.rs  builtins.rs  de.rs  error.rs  eval.rs  lexer.rs  mod.rs  parser.rs  scope.rs
crates/vitrum-config/tests/: dsl_test.rs
crates/vitrum-config/tests/snapshots/: dsl_test__config_snapshot.snap
crates/vitrum-ipc/: Cargo.toml
crates/vitrum-ipc/src/: client.rs  framing.rs  lib.rs  server.rs
crates/vitrum-ipc/src/protocol/: commands.rs  events.rs  mod.rs  responses.rs
crates/vitrum-ipc/tests/: ipc_test.rs
crates/vitrum-keyring/: Cargo.toml
crates/vitrum-keyring/src/: lib.rs
crates/vitrum-keyring/src/backends/: gnome_keyring.rs  keepassxc.rs  kwallet.rs  mod.rs
crates/vitrum-lock/: Cargo.toml
crates/vitrum-lock/src/: main.rs
crates/vitrum-notify/: Cargo.toml
crates/vitrum-notify/src/: app.rs  dbus.rs  main.rs
crates/vitrum-osd/: Cargo.toml
crates/vitrum-osd/src/: main.rs
crates/vitrum-shot/: Cargo.toml
crates/vitrum-shot/src/: main.rs
crates/vitrum-theme/: Cargo.toml
crates/vitrum-theme/src/: fontconfig.rs  gtk.rs  kvantum.rs  lib.rs  qt.rs  xrdb.rs
crates/vitrum/examples/: vitrum.toml
crates/vitrum/resources/: vitrum-portals.conf
crates/vitrum/src/: autostart.rs  cli.rs  compositor.rs  config.rs  ipc_handler.rs  keybind.rs  launcher.rs  main.rs  session.rs  session_services.rs  wallpaper.rs
crates/vitrum/src/backend/: headless.rs  mod.rs  render.rs  state.rs  state_methods.rs  tests.rs  types.rs  utils.rs  winit.rs
crates/vitrum/src/backend/drm/: input.rs  mod.rs  render.rs  run.rs
crates/vitrum/src/backend/handlers/: capture.rs  client.rs  compositor.rs  input.rs  mod.rs  output.rs  protocols.rs  xdg_shell.rs  xwayland.rs
crates/vitrum/src/damage/: mod.rs
crates/vitrum/src/layer_shell/: mod.rs
crates/vitrum/src/layout/: mod.rs
crates/vitrum/src/output/: mod.rs
crates/vitrum/src/renderer/: mod.rs
crates/vitrum/src/session_lock/: mod.rs
crates/vitrum/src/tests/: fixture.rs  mod.rs
crates/vitrum/src/wayland_runtime/: mod.rs
crates/vitrum/src/window/: mod.rs
crates/vitrum/src/workspace/: mod.rs  output.rs
crates/vitrumctl/: Cargo.toml
crates/vitrumctl/src/: main.rs
installer/: builder.py  cli.py  config.py  dependencies.py  groups.py  installer.py  utils.py
installer/assets/: vitrum.desktop
installer/assets/lightdm/: lightdm-vitrum.conf  vitrum-session  vitrum-setup
scripts/: install.sh
