[workspace]
members = [
	"crates/vitrum",
	"crates/vitrum-bar",
	"crates/vitrum-config",
	"crates/vitrum-ipc",
	"crates/vitrum-keyring",
	"crates/vitrum-notify",
	"crates/vitrum-osd",
	"crates/vitrum-shot",
	"crates/vitrum-theme",
	"crates/vitrum-clip",
	"crates/vitrumctl",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
calloop = "0.14.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
image = "0.25"
iced = "0.14"
iced_layershell = "0.16"
iced_sessionlock = "0.16"
insta = { version = "1.46", features = ["yaml"] }
pam = "0.8"
serde = { version = "1.0", features = ["derive"] }
smithay = { git = "https://github.com/Smithay/smithay.git", features = ["backend_drm", "backend_egl", "backend_gbm", "backend_libinput", "backend_session_libseat", "backend_udev", "backend_vulkan", "renderer_gl", "wayland_frontend", "xwayland"] }
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "5.14" }
