[package]
name = "vitrum-bar"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "vitrum-bar"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono = "0.4"
dirs.workspace = true
futures = "0.3"
iced = { workspace = true, features = ["tokio", "svg", "advanced"] }
iced_layershell.workspace = true
rmp-serde = "1.3"
serde.workspace = true
sysinfo = "0.38"
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vitrum-config = { path = "../vitrum-config" }
vitrum-ipc = { path = "../vitrum-ipc" }
