[package]
name = "vitrum-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
vitrum-ipc = { path = "../vitrum-ipc" }

[dev-dependencies]
criterion = "0.8.2"
insta = { workspace = true }
tempfile = "3.10"
tokio = { workspace = true }

[lib]
name = "vitrum_config"
path = "src/lib.rs"

[[bench]]
name = "dsl_bench"
harness = false
