[package]
name = "vitrum-keyring"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
vitrum-config = { path = "../vitrum-config" }
which = "8.0"
zbus = { workspace = true }
