[package]
name = "vitrum-notify"
version = "0.1.0"
authors = ["Simao Moreira <simao@example.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
iced = { version = "0.14", features = ["tokio"] }
iced_layershell = "0.16"
rand = "0.9"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
vitrum-config = { path = "../vitrum-config" }
vitrum-ipc = { path = "../vitrum-ipc" }
vitrum-theme = { path = "../vitrum-theme" }
zbus = { version = "5.1", default-features = false, features = ["tokio"] }
