[package]
name = "vitrum-shot"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "vitrum-shot"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
arboard = "3.4"
clap = { workspace = true }
image = { version = "0.25", features = ["png", "jpeg"] }
tempfile = "3.10"
tokio = { workspace = true }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["staging", "client"] }
