[package]
name = "vitrum"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
calloop = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "rayon"] }
libc = "0.2"
notify = "8.2"
rmp-serde = "1.3"
serde = { workspace = true }
smithay = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vitrum-config = { path = "../vitrum-config" }
vitrum-ipc = { path = "../vitrum-ipc" }
vitrum-keyring = { path = "../vitrum-keyring" }
vitrum-theme = { path = "../vitrum-theme" }
which = "8.0"

[dev-dependencies]
insta = { workspace = true }
