[package]
name = "vitrumctl"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "vitrumctl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rmp-serde = "1.3"
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vitrum-ipc = { path = "../vitrum-ipc" }
